examples/test/testpolicy9950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9950
  namespace: namespace169
spec:
  podSelector:
    matchLabels:
      key19: value11
      key32: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value19
          key45: value48
      podSelector:
        matchLabels:
          key11: value14
          key16: value28
